# RS_FEC

./: CMakeLists.txt  README.md  build.sh  calculator.cpp  demo.cpp  main.cpp
include/: galois_field.h  rs_fec.h  rs_fec_encode.h
src/: galois_field.cpp  rs_fec.cpp  rs_fec.h  rs_fec_encode.cpp  rs_vec.h
